Fix index.html (Change profile image tag to picture tag)

--- a/public/index.html
+++ b/public/index.html
@@ -48,14 +48,17 @@
           <div class="col-md-5 offset-md-1 topic">
             <h2 class="introduce">Let me introduce myself</h2>
           </div>
-          <div class="col-md-4">
-            <img src="http://via.placeholder.com/768x1150" alt="" class="img-fluid profile" align="top">
+          <div class="col-md-4 profile">
+            <picture>
+              <source media="(max-width: 991px)" srcset="http://via.placeholder.com/768x768">
+              <img src="http://via.placeholder.com/768x1150" alt="" class="img-fluid profile" align="top">
+            </picture>
           </div>
         </div>
         <div class="row">
           <div class="col-md-10 offset-md-1">
             <div class="row box">
-              <div class="col-md-6">
+              <div class="col-md-6 introduction-text">
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
                   aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur
