--- a/public/blog.html
+++ b/public/blog.html
@@ -62,9 +62,9 @@
             <div class="row">
               <div class="col-md-6 col-sm-12">
                 <div class="card">
-                  <img src="http://via.placeholder.com/540x345" alt="" class="img-fluid card-img-top">
+                  <a href="#"><img src="http://via.placeholder.com/540x345" alt="" class="img-fluid card-img-top"></a>
                   <div class="card-body">
-                    <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                    <h5 class="card-title"><a href="#">Lorem ipsum dolor sit amet</a></h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   </div>
                   <div class="card-footer">
@@ -74,9 +74,9 @@
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="card">
-                  <img src="http://via.placeholder.com/540x345" alt="" class="img-fluid card-img-top">
+                  <a href="#"><img src="http://via.placeholder.com/540x345" alt="" class="img-fluid card-img-top"></a>
                   <div class="card-body">
-                    <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                    <h5 class="card-title"><a href="#">Lorem ipsum dolor sit amet</a></h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   </div>
                   <div class="card-footer">
@@ -86,9 +86,9 @@
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="card">
-                  <img src="http://via.placeholder.com/540x345" alt="" class="img-fluid card-img-top">
+                  <a href="#"><img src="http://via.placeholder.com/540x345" alt="" class="img-fluid card-img-top"></a>
                   <div class="card-body">
-                    <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                    <h5 class="card-title"><a href="#">Lorem ipsum dolor sit amet</a></h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   </div>
                   <div class="card-footer">
@@ -98,9 +98,9 @@
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="card">
-                  <img src="http://via.placeholder.com/540x345" alt="" class="img-fluid card-img-top">
+                  <a href="#"><img src="http://via.placeholder.com/540x345" alt="" class="img-fluid card-img-top"></a>
                   <div class="card-body">
-                    <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                    <h5 class="card-title"><a href="#">Lorem ipsum dolor sit amet</a></h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   </div>
                   <div class="card-footer">
@@ -110,9 +110,9 @@
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="card">
-                  <img src="http://via.placeholder.com/540x345" alt="" class="img-fluid card-img-top">
+                  <a href="#"><img src="http://via.placeholder.com/540x345" alt="" class="img-fluid card-img-top"></a>
                   <div class="card-body">
-                    <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                    <h5 class="card-title"><a href="#">Lorem ipsum dolor sit amet</a></h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   </div>
                   <div class="card-footer">
@@ -122,9 +122,9 @@
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="card">
-                  <img src="http://via.placeholder.com/540x345" alt="" class="img-fluid card-img-top">
+                  <a href="#"><img src="http://via.placeholder.com/540x345" alt="" class="img-fluid card-img-top"></a>
                   <div class="card-body">
-                    <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+                    <h5 class="card-title"><a href="#">Lorem ipsum dolor sit amet</a></h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   </div>
                   <div class="card-footer">
