--- a/public/single.html
+++ b/public/single.html
@@ -31,7 +31,7 @@
             <a class="nav-link active" href="#blog">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="#works">Works</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
