--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,6 @@
         </ul>
       </div>
     </nav>
-    </nav>
   </header>
   <main id="wrapper">
     <section id="introduction">
@@ -51,7 +50,7 @@
           <div class="col-md-4 profile">
             <picture>
               <source media="(max-width: 991px)" srcset="http://via.placeholder.com/768x768">
-              <img src="http://via.placeholder.com/768x1150" alt="" class="img-fluid profile" align="top">
+              <img src="http://via.placeholder.com/768x1150" alt="" class="img-fluid profile">
             </picture>
           </div>
         </div>
