--- a/public/contact.html
+++ b/public/contact.html
@@ -25,16 +25,22 @@
       <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#introduction">Introduction</a>
+            <a class="nav-link" href="index.html">Introduction</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#blog">Blog</a>
+            <a class="nav-link" href="single.html">Single</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#works">Works</a>
+            <a class="nav-link" href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#contact">Contact</a>
+            <a class="nav-link" href="works.html">Works</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="404.html">404</a>
           </li>
         </ul>
       </div>
