--- a/public/works.html
+++ b/public/works.html
@@ -25,20 +25,25 @@
       <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#introduction">Introduction</a>
+            <a class="nav-link" href="index.html">Introduction</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#blog">Blog</a>
+            <a class="nav-link" href="single.html">Single</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="#works">Works</a>
+            <a class="nav-link" href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
+            <a class="nav-link active" href="#">Works</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="404.html">404</a>
           </li>
         </ul>
       </div>
-    </nav>
     </nav>
   </header>
   <main id="wrapper">
